# SYCL-PRNG

./: .vsts.yaml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  azure-pipelines.yml
cmake/Modules/: FindComputeCpp.cmake
examples/: CMakeLists.txt  RandomSeed.cpp  SYCL-RandomSeed.cpp
include/PRNG/: MWC64X.hpp  TinyMT.hpp
include/PRNG/concepts/: InputIterator.hpp  Prelude.hpp  SeedSequence.hpp
